# codespan

./: .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
codespan/: CHANGELOG.md  Cargo.toml  README.md
codespan-lsp/: CHANGELOG.md  Cargo.toml
codespan-lsp/src/: lib.rs
codespan-reporting/: CHANGELOG.md  Cargo.toml  README.md
codespan-reporting/examples/: custom_files.rs  emit.rs  peg_calculator.rs  readme_preview.rs  reusable_diagnostic.rs  sample.rs  term.rs
codespan-reporting/src/: diagnostic.rs  emitter.rs  files.rs  lib.rs  term.rs
codespan-reporting/src/emitter/: mod.rs
codespan-reporting/src/emitter/snapshots/: fizz_buzz__no_color.snap  tabbed__tab_width_3_no_color.snap  tabbed__tab_width_6_no_color.snap  tabbed__tab_width_default_no_color.snap  tests__fizz_buzz_no_color.snap  tests__tabbed_default_no_color.snap  tests__tabbed_tab_3_no_color.snap  tests__tabbed_tab_6_no_color.snap
codespan-reporting/src/emitter/views/: border_left.rs  border_top.rs  border_top_left.rs  diagnostic.rs  gutter.rs  header.rs  locus.rs  mod.rs  new_line.rs  note.rs  note_bullet.rs  source_snippet.rs
codespan-reporting/src/term/: config.rs  display_list.rs  html.rs  mod.rs  renderer.rs  views.rs
codespan-reporting/src/term/views/: diagnostic.rs  gutter.rs  header.rs  locus.rs  mod.rs  new_line.rs  note.rs  source_snippet.rs
codespan-reporting/src/term/views/source_snippet/: border.rs  gutter.rs  mod.rs  note.rs  underline.rs
codespan-reporting/tests/: emit.rs  term.rs
codespan-reporting/tests/snapshots/: empty_spans__rich_color.snap  empty_spans__rich_no_color.snap  fizz_buzz__rich_color.snap  fizz_buzz__rich_no_color.snap  fizz_buzz__rich_no_color_ascii.snap  fizz_buzz__short_color.snap  fizz_buzz__short_no_color.snap  multifile__rich_color.snap  multifile__rich_no_color.snap  multifile__rich_no_color_ascii.snap  multifile__short_color.snap  multifile__short_no_color.snap  tabbed__tab_width_3_no_color.snap  tabbed__tab_width_6_no_color.snap  tabbed__tab_width_default_no_color.snap  term__empty_ranges__medium_color.snap  term__empty_ranges__medium_no_color.snap  term__empty_ranges__rich_color.snap  term__empty_ranges__rich_no_color.snap  term__empty_ranges__short_no_color.snap  term__empty_spans__rich_color.snap  term__empty_spans__rich_no_color.snap  term__empty_spans__short_color.snap  term__fizz_buzz__medium_color.snap  term__fizz_buzz__medium_no_color.snap  term__fizz_buzz__rich_color.snap  term__fizz_buzz__rich_no_color.snap  term__fizz_buzz__short_color.snap  term__fizz_buzz__short_no_color.snap  term__highlight__rich_color.snap  term__message_and_notes__rich_color.snap  term__message_and_notes__rich_no_color.snap  term__multifile__medium_color.snap  term__multifile__medium_no_color.snap  term__multifile__rich_color.snap  term__multifile__rich_no_color.snap  term__multiline_omit__rich_color.snap  term__multiline_omit__rich_no_color.snap  term__multiline_omit__short_color.snap  term__multiline_omit__short_no_color.snap  (+36 more)
codespan-reporting/tests/support/: mod.rs
codespan/src/: codemap.rs  file.rs  filemap.rs  files.rs  index.rs  lib.rs  location.rs  pos.rs  span.rs
codespan/src/index/: byte.rs  column.rs  line.rs  mod.rs
tools/: publish
