[package]
name = "codespan-lsp"
version = "0.8.0" # CODESPAN
license = "Apache-2.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
description = "Conversions between codespan types and Language Server Protocol types"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-lsp"
edition = "2018"

[dependencies]
codespan = { version = "0.8.0", path = "../codespan" } # CODESPAN
lsp-types = "0.72"
url = "2"
