[package]
name = "codespan-reporting"
version = "0.5.0" # CODESPAN
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Diagnostic reporting support for the codespan crate"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-reporting"
exclude = ["assets/**"]
edition = "2018"

[dependencies]
codespan = { path = "../codespan", version = "0.5.0" } # CODESPAN
heapsize = { version = "0.4", optional = true }
heapsize_derive = { version = "0.1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
termcolor = "1.0"
unicode-width = "0.1"

[dev-dependencies]
insta = "0.11"
lazy_static = "1.4"
structopt = "0.2"
unindent = "0.1"

[features]
serialization = ["serde", "serde/rc", "codespan/serialization"]
memory_usage = ["heapsize_derive", "heapsize", "codespan/memory_usage"]
