[package]
name = "codespan-reporting"
version = "0.11.1"
readme = "../README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Beautiful diagnostic reporting for text-based programming languages"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-reporting"
exclude = ["assets/**"]
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, optional = true, features = ["derive", "alloc"] }
termcolor = { version = "1.0.4", optional = true }
unicode-width = ">=0.1,<0.3"

[dev-dependencies]
pico-args = "0.5.0"
anyhow = "1"
insta = "1.6.3"
lazy_static = "1.4"
peg = "0.7"
rustyline = "6"
unindent = "0.1"

[features]
default = ["std", "termcolor"]
std = ["serde?/std"]
termcolor = ["std", "dep:termcolor"]
serialization = ["serde", "serde/rc"]
ascii-only = []

[lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"