[package]
name = "codespan"
version = "0.8.0" # CODESPAN
readme = "../README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Data structures for tracking locations in source code"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan"
edition = "2018"

[dependencies]
serde = { version = "1", optional = true, features = ["derive"]}

[dev-dependencies]
pretty_assertions = "0.6"

[features]
serialization = ["serde"]
