[package]
name = "codespan"
version = "0.13.1"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Data structures for tracking locations in source code"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan"
categories = ["compilers", "encoding"]
keywords = ["source-location", "serialization", "structures", "diagnostics", "tracking"]
edition = "2021"
rust-version = "1.67"

[dependencies]
codespan-reporting = { path = "../codespan-reporting", version = "0.13.1", default-features = false }
serde = { version = "1", default-features = false, optional = true, features = ["derive", "alloc"] }

[dev-dependencies]
termcolor = "1"

[features]
default = ["std", "termcolor"]
std = ["codespan-reporting/std", "serde?/std"]
termcolor = ["std", "codespan-reporting/termcolor"]
serialization = ["serde", "codespan-reporting/serialization"]

[lints.clippy]
# Certain items from `core` are re-exported in `alloc` and `std`, and likewise `alloc` has items
# re-exported in `std`.
# `core` is available on all platforms, `alloc` is available on almost all, and `std` is only
# available on some.
# These lints ensure we don't import from a "less available" crate without reason.
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
